--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-container section">
+      <div class="header-container section-width">
         <div class="header-container__logo">
           <a href="#">
             <svg
@@ -350,7 +350,9 @@
         </div>
       </div>
     </header>
-    <main class="section main"></main>
+    <main class="main">
+      <div class="main-content section section-width"></div>
+    </main>
     <script src="./dist/js/scripts.min.js"></script>
   </body>
 </html>
