--- a/index.html
+++ b/index.html
@@ -347,12 +347,14 @@
         </div>
         <div class="header-container__btn">
           <button class="btn">Вход</button>
+          <button class="btn creat-visit-btn">Создать визит</button>
         </div>
       </div>
     </header>
     <main class="main">
       <div class="main-content section section-width"></div>
     </main>
-    <script src="./dist/js/scripts.min.js"></script>
+    <script type="module" src="./src/js/main.js"></script>
+    <!-- <script type="module" src="./src/js/visit-modal-form.js"></script> -->
   </body>
 </html>
