--- a/index.html
+++ b/index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
+      crossorigin="anonymous"
+    />
 
     <link rel="stylesheet" href="./dist/css/style.min.css" />
 
     <title>Cards</title>
-</head>
-
-<body>
+  </head>
+  <body>
     <header class="header">
-        <div class="header-container section-width">
-            <div class="header-container__logo">
-                <a href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100pt" height="80pt" viewBox="0 0 76 59" version="1.1">
+      <div class="header-container section-width">
+        <div class="header-container__logo">
+          <a href="#">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="100pt"
+              height="80pt"
+              viewBox="0 0 76 59"
+              version="1.1"
+            >
               <g id="surface1">
                 <path
                   style="
@@ -330,19 +343,18 @@
                 />
               </g>
             </svg>
-                </a>
-            </div>
-            <div class="header-container__btn">
-                <button class="btn">Вход</button>
-                <button class="btn creat-visit-btn">Создать визит</button>
-            </div>
+          </a>
         </div>
+        <div class="header-container__btn">
+          <button class="btn">Вход</button>
+          <button class="btn creat-visit-btn">Создать визит</button>
+        </div>
+      </div>
     </header>
     <main class="main">
-        <div class="main-content section section-width"></div>
+      <div class="main-content section section-width"></div>
     </main>
     <script type="module" src="./src/js/main.js"></script>
     <!-- <script type="module" src="./src/js/visit-modal-form.js"></script> -->
-</body>
-
+  </body>
 </html>
