--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
     <main class="main">
       <div class="main-content section section-width"></div>
     </main>
-    <script type="module" src="./src/js/main.js"></script>
+    <script type="module" src="./dist/js/main.js"></script>
     <!-- <script type="module" src="./src/js/visit-modal-form.js"></script> -->
   </body>
 </html>
