--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
           </a>
         </div>
         <div class="header-container__btn">
-          <button class="btn">Вход</button>
+          <button id="modal" type="submit" class="btn">Вход</button>
           <button class="btn creat-visit-btn">Создать визит</button>
         </div>
       </div>
