--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
       </div>
     </header>
     <main class="main">
-      <div class="main-content card section section-width"></div>
+      <div class="main-content card section section-width"><div class="no-items">No items have been added</div>
     </main>
     <script type="module" src="./dist/js/main.js"></script>
     <!-- <script type="module" src="./src/js/visit-modal-form.js"></script> -->
