--- a/index.html
+++ b/index.html
@@ -351,9 +351,50 @@
         </div>
       </div>
     </header>
-    <main class="main">
-      <div class="main-content card section section-width"><div class="no-items">No items have been added</div>
-    </main>
+    <div class="main-box">
+      <aside>
+        <div class="filter">
+          <button class="btn btn__filter">Фильтр</button>
+          <div class="filter-box">
+            <div class="filter__doctor doctor">
+              <legend>Доктор:</legend>
+
+              <div class="doctor__name">
+                <input
+                  class="custom-checkbox"
+                  type="radio"
+                  id="Cardiologist"
+                  name="doctor-name"
+                />
+                <label for="Cardiologist">Cardiologist</label>
+
+                <input
+                  class="custom-checkbox"
+                  type="radio"
+                  id="Dentist"
+                  name="doctor-name"
+                />
+                <label for="Dentist">Dentist</label>
+
+                <input
+                  class="custom-checkbox"
+                  type="radio"
+                  id="Therapist"
+                  name="doctor-name"
+                />
+                <label for="Therapist">Therapist</label>
+              </div>
+            </div>
+          </div>
+        </div>
+      </aside>
+      <main class="main">
+        <div class="main-content card section section-width">
+          <div class="no-items">No items have been added</div>
+        </div>
+      </main>
+    </div>
+
     <script type="module" src="./dist/js/main.js"></script>
     <!-- <script type="module" src="./src/js/visit-modal-form.js"></script> -->
   </body>
