doctor filter upd

--- a/index.html
+++ b/index.html
@@ -352,47 +352,49 @@
       </div>
     </header>
     <div class="main-box">
-      <aside>
-        <div class="filter">
-          <button class="btn btn__filter">Фильтр</button>
-          <div class="filter-box">
-            <div class="filter__doctor doctor">
-              <legend>Доктор:</legend>
+      <div class="section-width">
+        <aside>
+          <div class="filter">
+            <button class="btn btn__filter">Фильтр</button>
+            <div class="filter-box">
+              <div class="filter__doctor doctor">
+                <legend>Доктор:</legend>
 
-              <div class="doctor__name">
-                <input
-                  class="custom-checkbox"
-                  type="radio"
-                  id="Cardiologist"
-                  name="doctor-name"
-                />
-                <label for="Cardiologist">Cardiologist</label>
+                <div class="doctor__name">
+                  <input
+                    class="custom-checkbox"
+                    type="checkbox"
+                    id="Сardiologist"
+                    name="doctor-name"
+                  />
+                  <label for="Сardiologist">Сardiologist</label>
 
-                <input
-                  class="custom-checkbox"
-                  type="radio"
-                  id="Dentist"
-                  name="doctor-name"
-                />
-                <label for="Dentist">Dentist</label>
+                  <input
+                    class="custom-checkbox"
+                    type="checkbox"
+                    id="Dentist"
+                    name="doctor-name"
+                  />
+                  <label for="Dentist">Dentist</label>
 
-                <input
-                  class="custom-checkbox"
-                  type="radio"
-                  id="Therapist"
-                  name="doctor-name"
-                />
-                <label for="Therapist">Therapist</label>
+                  <input
+                    class="custom-checkbox"
+                    type="checkbox"
+                    id="Therapist"
+                    name="doctor-name"
+                  />
+                  <label for="Therapist">Therapist</label>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </aside>
-      <main class="main">
-        <div class="main-content card section section-width">
-          <div class="no-items">No items have been added</div>
-        </div>
-      </main>
+        </aside>
+        <main class="main">
+          <div class="main-content card section">
+            <div class="no-items">No items have been added</div>
+          </div>
+        </main>
+      </div>
     </div>
 
     <script type="module" src="./dist/js/main.js"></script>
