added search pacient by name

--- a/index.html
+++ b/index.html
@@ -386,6 +386,16 @@
                   <label for="Therapist">Therapist</label>
                 </div>
               </div>
+
+              <div class="filter__name-pacient name-pacient">
+                <legend>Введите имя пациента:</legend>
+                <!-- <label for="Name">Введите имя пациента</label> -->
+                <input
+                  type="text"
+                  class="name-pacient__input-search"
+                  id="Name"
+                />
+              </div>
             </div>
           </div>
         </aside>
